--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,77 +29,21 @@ http {
     lua_shared_dict sse_sessions 5m;
 
     server {
-    # STATIC ROUTES (no auth needed)
-    location = /login {
-        try_files /login.html =404;
-    }
-    
-    location = /register {
-        try_files /register.html =404;
-    }
-    
-    # INDEX WITH NAVIGATION ({{ nav }} based on auth)
+    # Set variables for is_who
+    set $user_type '';
+    set $username '';
+    set $is_admin '';
+    set $is_approved '';
+    set $is_guest '';
+
+    # INDEX WITH DYNAMIC NAV (using is_who)
     location = / {
         content_by_lua_block {
             local is_who = require "is_who"
             local template = require "template"
-            local user_type, username = is_who.set_vars()
             
-            -- Generate nav based on user
-            local nav = ""
-            if ngx.var.is_admin == "true" then
-                nav = [[
-                    <nav class="navbar navbar-expand-lg navbar-dark">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="/"><i class="bi bi-lightning-charge-fill"></i> ai.junder.uk</a>
-                            <div class="navbar-nav ms-auto">
-                                <a class="nav-link" href="/chat">Chat</a>
-                                <a class="nav-link" href="/dash">Dashboard</a>
-                                <span class="navbar-text">]] .. username .. [[ (Admin)</span>
-                                <button class="btn btn-outline-light btn-sm ms-2" onclick="logout()">Logout</button>
-                            </div>
-                        </div>
-                    </nav>
-                ]]
-            elseif ngx.var.is_approved == "true" then
-                nav = [[
-                    <nav class="navbar navbar-expand-lg navbar-dark">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="/"><i class="bi bi-lightning-charge-fill"></i> ai.junder.uk</a>
-                            <div class="navbar-nav ms-auto">
-                                <a class="nav-link" href="/chat">Chat</a>
-                                <a class="nav-link" href="/dash">Dashboard</a>
-                                <span class="navbar-text">]] .. username .. [[</span>
-                                <button class="btn btn-outline-light btn-sm ms-2" onclick="logout()">Logout</button>
-                            </div>
-                        </div>
-                    </nav>
-                ]]
-            elseif user_type == "guest" then
-                nav = [[
-                    <nav class="navbar navbar-expand-lg navbar-dark">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="/"><i class="bi bi-lightning-charge-fill"></i> ai.junder.uk</a>
-                            <div class="navbar-nav ms-auto">
-                                <a class="nav-link" href="/chat">Guest Chat</a>
-                                <a class="nav-link" href="/register">Register</a>
-                            </div>
-                        </div>
-                    </nav>
-                ]]
-            else
-                nav = [[
-                    <nav class="navbar navbar-expand-lg navbar-dark">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="/"><i class="bi bi-lightning-charge-fill"></i> ai.junder.uk</a>
-                            <div class="navbar-nav ms-auto">
-                                <a class="nav-link" href="/login">Login</a>
-                                <a class="nav-link" href="/register">Register</a>
-                            </div>
-                        </div>
-                    </nav>
-                ]]
-            end
+            -- is_who generates nav based on user permissions
+            local nav = is_who.generate_nav()
             
             template.render_template("/usr/local/openresty/nginx/html/index.html", {
                 nav = nav
@@ -107,46 +51,20 @@ http {
         }
     }
     
-    # CHAT SPA ROUTE (dynamic based on auth)
-    location = /chat {
-        content_by_lua_block {
-            local is_who = require "is_who"
-            local user_type, username = is_who.set_vars()
-            
-            -- Route to appropriate handler
-            if ngx.var.is_admin == "true" then
-                local is_admin = require "is_admin"
-                is_admin.handle_chat_page()
-            elseif ngx.var.is_approved == "true" then
-                local is_approved = require "is_approved"
-                is_approved.handle_chat_page()
-            elseif user_type ~= "none" and ngx.var.is_approved ~= "true" then
-                return ngx.redirect("/pending")
-            else
-                local is_guest = require "is_guest"
-                is_guest.handle_chat_page()
-            end
-        }
-    }
-    
-    # DASHBOARD SPA ROUTE (dynamic based on auth)
+    # DASH SPA ROUTE (is_who routes to appropriate handler)
     location = /dash {
         content_by_lua_block {
             local is_who = require "is_who"
-            local user_type, username = is_who.set_vars()
-            
-            -- Route to appropriate handler
-            if ngx.var.is_admin == "true" then
-                local is_admin = require "is_admin"
-                is_admin.handle_dash_page()
-            elseif ngx.var.is_approved == "true" then
-                local is_approved = require "is_approved"
-                is_approved.handle_dash_page()
-            elseif user_type ~= "none" and ngx.var.is_approved ~= "true" then
-                return ngx.redirect("/pending")
-            else
-                return ngx.redirect("/login")
-            end
+            is_who.route_to_handler("dash")
+        }
+    }
+    location = /chat {
+        content_by_lua_block {
+            local is_who = require "is_who"
+            is_who.route_to_handler("chat")
+            template.render_template("/usr/local/openresty/nginx/html/app.html", {
+                nav = nav
+            })
         }
     }
 }
