--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Fixed to work with updated Lua files
+# nginx/nginx.conf - Complete configuration
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -29,43 +29,234 @@ http {
     lua_shared_dict sse_sessions 5m;
 
     server {
-    # Set variables for is_who
-    set $user_type '';
-    set $username '';
-    set $is_admin '';
-    set $is_approved '';
-    set $is_guest '';
+        listen 80;
+        server_name localhost;
+        
+        # SIMPLIFIED VARIABLES - Only what's needed
+        set $user_type '';
+        set $username '';
+        set $is_admin '';
+        set $is_approved '';
+        set $is_guest '';
 
-    # INDEX WITH DYNAMIC NAV (using is_who)
-    location = / {
-        content_by_lua_block {
-            local is_who = require "is_who"
-            local template = require "template"
+        # STATIC ASSETS - No auth required
+        location /js/ {
+            root /usr/local/openresty/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+        
+        location /css/ {
+            root /usr/local/openresty/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+        
+        location /static/ {
+            root /usr/local/openresty/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        location = /favicon.ico {
+            root /usr/local/openresty/nginx/html;
+            log_not_found off;
+            access_log off;
+        }
+
+        location = /health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
+        }
+
+        # STATIC ROUTES
+        location = /login {
+            try_files /login.html =404;
+        }
+        
+        location = /register {
+            try_files /register.html =404;
+        }
+
+        # INDEX WITH DYNAMIC NAV
+        location = / {
+            content_by_lua_block {
+                local is_who = require "is_who"
+                local template = require "template"
+                
+                -- is_who generates nav based on user permissions
+                local nav = is_who.generate_nav()
+                
+                template.render_template("/usr/local/openresty/nginx/html/index.html", {
+                    nav = nav
+                })
+            }
+        }
+        
+        # CHAT SPA ROUTE
+        location = /chat {
+            content_by_lua_block {
+                local is_who = require "is_who"
+                is_who.route_to_handler("chat")
+            }
+        }
+        
+        # DASH SPA ROUTE
+        location = /dash {
+            content_by_lua_block {
+                local is_who = require "is_who"
+                is_who.route_to_handler("dash")
+            }
+        }
+
+        # API ROUTES
+        location ~ ^/api/auth/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             
-            -- is_who generates nav based on user permissions
-            local nav = is_who.generate_nav()
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
             
-            template.render_template("/usr/local/openresty/nginx/html/index.html", {
-                nav = nav
-            })
+            lua_need_request_body on;
+            content_by_lua_block {
+                local login = require "login"
+                login.handle_auth_api()
+            }
+        }
+
+        location = /api/register {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local register = require "register"
+                register.handle_register_api()
+            }
+        }
+
+        location ~ ^/api/admin/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local is_admin = require "is_admin"
+                is_admin.handle_admin_api()
+            }
+        }
+
+        location ~ ^/api/chat/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            add_header 'Cache-Control' 'no-cache';
+            add_header 'Connection' 'keep-alive';
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local is_who = require "is_who"
+                local user_type, username = is_who.set_vars()
+                
+                -- Block pending users from chat API
+                if user_type ~= "none" and user_type ~= "guest" and ngx.var.is_approved ~= "true" then
+                    ngx.status = 403
+                    ngx.header.content_type = 'application/json'
+                    ngx.say('{"error": "Account pending approval - chat access denied", "is_approved": false, "redirect": "/pending"}')
+                    ngx.exit(403)
+                end
+                
+                if ngx.var.is_approved == "true" then
+                    local is_approved = require "is_approved"
+                    is_approved.handle_chat_api()
+                elseif user_type == "guest" then
+                    local is_guest = require "is_guest"
+                    is_guest.handle_guest_api()
+                else
+                    ngx.status = 401
+                    ngx.header.content_type = 'application/json'
+                    ngx.say('{"error": "Authentication required"}')
+                    ngx.exit(401)
+                end
+            }
+        }
+
+        location ~ ^/api/guest/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local is_guest = require "is_guest"
+                is_guest.handle_guest_api()
+            }
+        }
+
+        # ERROR PAGES
+        error_page 404 @custom_404;
+        error_page 500 502 503 504 @custom_50x;
+        
+        location @custom_404 {
+            internal;
+            try_files /404.html =404;
+        }
+        
+        location @custom_50x {
+            internal;
+            try_files /50x.html =500;
+        }
+
+        # CATCH-ALL for unknown routes
+        location / {
+            content_by_lua_block {
+                ngx.header.content_type = "text/html"
+                ngx.status = 404
+                
+                local file = io.open("/usr/local/openresty/nginx/html/404.html", "r")
+                if file then
+                    local content = file:read("*a")
+                    file:close()
+                    ngx.say(content)
+                end
+            }
         }
     }
-    
-    # DASH SPA ROUTE (is_who routes to appropriate handler)
-    location = /dash {
-        content_by_lua_block {
-            local is_who = require "is_who"
-            is_who.route_to_handler("dash")
-        }
-    }
-    location = /chat {
-        content_by_lua_block {
-            local is_who = require "is_who"
-            is_who.route_to_handler("chat")
-            template.render_template("/usr/local/openresty/nginx/html/app.html", {
-                nav = nav
-            })
-        }
-    }
-}
 }
