--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Complete configuration
+# nginx/nginx.conf - Fixed configuration
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -70,27 +70,26 @@ http {
             add_header Content-Type text/plain;
         }
 
-        # STATIC ROUTES
+        # TEMPLATE-BASED ROUTES
         location = /login {
-            try_files /login.html =404;
+            content_by_lua_block {
+                local is_public = require "is_public"
+                is_public.handle_login_page()
+            }
         }
         
         location = /register {
-            try_files /register.html =404;
+            content_by_lua_block {
+                local is_public = require "is_public"
+                is_public.handle_register_page()
+            }
         }
 
-        # INDEX WITH DYNAMIC NAV
+        # INDEX WITH TEMPLATE SYSTEM
         location = / {
             content_by_lua_block {
-                local is_who = require "is_who"
-                local template = require "template"
-                
-                -- is_who generates nav based on user permissions
-                local nav = is_who.generate_nav()
-                
-                template.render_template("/usr/local/openresty/nginx/html/index.html", {
-                    nav = nav
-                })
+                local is_public = require "is_public"
+                is_public.handle_index_page()
             }
         }
         
@@ -196,7 +195,11 @@ http {
                     ngx.exit(403)
                 end
                 
-                if ngx.var.is_approved == "true" then
+                -- Route to appropriate handler based on user type
+                if ngx.var.is_admin == "true" then
+                    local is_admin = require "is_admin"
+                    is_admin.handle_chat_api()
+                elseif ngx.var.is_approved == "true" then
                     local is_approved = require "is_approved"
                     is_approved.handle_chat_api()
                 elseif user_type == "guest" then
@@ -236,26 +239,25 @@ http {
         
         location @custom_404 {
             internal;
-            try_files /404.html =404;
+            content_by_lua_block {
+                local is_public = require "is_public"
+                is_public.handle_404_page()
+            }
         }
         
         location @custom_50x {
             internal;
-            try_files /50x.html =500;
+            content_by_lua_block {
+                local is_public = require "is_public"
+                is_public.handle_50x_page()
+            }
         }
 
         # CATCH-ALL for unknown routes
         location / {
             content_by_lua_block {
-                ngx.header.content_type = "text/html"
-                ngx.status = 404
-                
-                local file = io.open("/usr/local/openresty/nginx/html/404.html", "r")
-                if file then
-                    local content = file:read("*a")
-                    file:close()
-                    ngx.say(content)
-                end
+                local is_public = require "is_public"
+                is_public.handle_404_page()
             }
         }
     }
