--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,6 +38,7 @@ http {
         set $is_admin '';
         set $is_approved '';
         set $is_guest '';
+        set $guest_slot_id '';
 
         # STATIC ASSETS - No auth required
         location /js/ {
@@ -167,6 +168,27 @@ http {
             }
         }
 
+        # GUEST API - Separate from chat API
+        location ~ ^/api/guest/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local is_guest = require "is_guest"
+                is_guest.handle_guest_api()
+            }
+        }
+
+        # CHAT API - Handles all chat-related endpoints
         location ~ ^/api/chat/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -202,34 +224,11 @@ http {
                 elseif ngx.var.is_approved == "true" then
                     local is_approved = require "is_approved"
                     is_approved.handle_chat_api()
-                elseif user_type == "guest" then
-                    local is_guest = require "is_guest"
-                    is_guest.handle_guest_api()
                 else
-                    ngx.status = 401
-                    ngx.header.content_type = 'application/json'
-                    ngx.say('{"error": "Authentication required"}')
-                    ngx.exit(401)
+                    -- For guests and unauthenticated users, route to guest chat handler
+                    local is_guest = require "is_guest"
+                    is_guest.handle_chat_api()
                 end
-            }
-        }
-
-        location ~ ^/api/guest/ {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-            
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            lua_need_request_body on;
-            content_by_lua_block {
-                local is_guest = require "is_guest"
-                is_guest.handle_guest_api()
             }
         }
 
