--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -109,6 +109,14 @@ http {
                 is_who.route_to_handler("dash")
             }
         }
+        
+        # PENDING ROUTE (alias for dash for pending users)
+        location = /pending {
+            content_by_lua_block {
+                local is_who = require "is_who"
+                is_who.route_to_handler("dash")
+            }
+        }
 
         # API ROUTES
         location ~ ^/api/auth/ {
