--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,12 +32,12 @@ http {
         listen 80;
         server_name localhost;
         
-        # SIMPLIFIED VARIABLES - Only what's needed
-        set $user_type '';
-        set $username '';
-        set $is_admin '';
-        set $is_approved '';
-        set $is_guest '';
+        # SIMPLIFIED VARIABLES - ALL must be declared here
+        set $user_type 'isnone';
+        set $username 'anonymous';
+        set $is_admin 'false';
+        set $is_approved 'false';
+        set $is_guest 'false';
         set $guest_slot_id '';
 
         # STATIC ASSETS - No auth required
