This is much cleaner and follows the DRY principle perfectly. All the complex logic lives in one place (is_who.lua), and nginx just delegates to it.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Fixed configuration
+# nginx/nginx.conf - Updated configuration with simplified variables
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -38,7 +38,7 @@ http {
         set $is_admin 'false';
         set $is_approved 'false';
         set $is_guest 'false';
-        set $guest_slot_id '';
+        set $guest_slot_id '';  # Now stores slot_number (1 or 2) as string
 
         # STATIC ASSETS - No auth required
         location /js/ {
@@ -57,6 +57,13 @@ http {
             root /usr/local/openresty/nginx/html;
             expires 1y;
             add_header Cache-Control "public, immutable";
+        }
+
+        # Handle missing source maps gracefully
+        location ~* \.map$ {
+            return 404;
+            log_not_found off;
+            access_log off;
         }
 
         location = /favicon.ico {
@@ -94,7 +101,7 @@ http {
             }
         }
         
-        # CHAT SPA ROUTE
+        # CHAT SPA ROUTE - With auto-guest functionality
         location = /chat {
             content_by_lua_block {
                 local is_who = require "is_who"
@@ -196,7 +203,7 @@ http {
             }
         }
 
-        # CHAT API - Handles all chat-related endpoints
+        # CHAT API - Simple delegation to is_who routing
         location ~ ^/api/chat/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -214,29 +221,9 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
+                -- Use the same routing logic as chat page, but for API
                 local is_who = require "is_who"
-                local user_type, username = is_who.set_vars()
-                
-                -- Block pending users from chat API
-                if user_type ~= "none" and user_type ~= "guest" and ngx.var.is_approved ~= "true" then
-                    ngx.status = 403
-                    ngx.header.content_type = 'application/json'
-                    ngx.say('{"error": "Account pending approval - chat access denied", "is_approved": false, "redirect": "/pending"}')
-                    ngx.exit(403)
-                end
-                
-                -- Route to appropriate handler based on user type
-                if ngx.var.is_admin == "true" then
-                    local is_admin = require "is_admin"
-                    is_admin.handle_chat_api()
-                elseif ngx.var.is_approved == "true" then
-                    local is_approved = require "is_approved"
-                    is_approved.handle_chat_api()
-                else
-                    -- For guests and unauthenticated users, route to guest chat handler
-                    local is_guest = require "is_guest"
-                    is_guest.handle_chat_api()
-                end
+                is_who.route_to_handler("chat_api")
             }
         }
 
